# lunch-menu-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
src/lunch_menu_bot/: main.py  slack_main.py
src/lunch_menu_bot/discord/: bot.py  embeds.py
src/lunch_menu_bot/format/: openai.py
src/lunch_menu_bot/integrations/: constants.py
src/lunch_menu_bot/integrations/discord/: bot.py  embeds.py
src/lunch_menu_bot/integrations/slack/: markdown.py  webhook.py
src/lunch_menu_bot/menu/: kragerup_og_ko.py
src/lunch_menu_bot/time/: time.py
src/lunch_menu_bot/tools/: menu_fetcher.py
